<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidHCI</string>
    <string name="title_activity_new_vehicle">New Vehicle</string>
    <string name="action_settings">Podesavanja</string>
    <string name="product_name">Registarska oznaka</string>
    <string name="description">Opis</string>
    <string name="title_activity_list_all">Svi unosi</string>
    <string name="upload_f">upload fotografija</string>
    <string name="fitId">1851 DL</string>
    <string name="odaberi_sliku">Odaberi sliku</string>
    <string name="novo_vozilo">Novo vozilo</string>
    <string name="sva_vozila">Sva Vozila</string>
    <string name="upload_slike">Upload vozila</string>
    <string name="odabrana_slika">Odabrana slika</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_search">Search</string>
    <string name="search_button_text">Trazi</string>
    <string name="search_vehicles">Pretraga</string>
    <string name="title_activity_menu_screen">Main Menu</string>
    <string name="main_screen">Glavni izbornik</string>
    <string name="title_activity_loginscreen">Login</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="izmijeni_vozilo">Izmijeni vozilo</string>

</resources>
