<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black_overlay"
    android:orientation="vertical"
    tools:context=".NewVehicleActivity" >

    <ImageView
        android:id="@+id/imageView_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/odabrana_slika"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/button_selectpic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/odaberi_sliku"
        android:textColor="@color/white" />

    <!-- Name Label -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/product_name"
        android:textColor="@color/white"
        android:textSize="17dip" />

    <!-- Input Name -->

    <EditText
        android:id="@+id/inputName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/white" />

    <!-- Description Label -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="17dip" />

    <!-- Input description -->

    <EditText
        android:id="@+id/inputDesc"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:gravity="top"
        android:inputType="text"
        android:lines="4"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_slike"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/messageText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>